# fts_unity_native_plugin_reloader

./: LICENSE  readme.md  update_plugins.bat
NativeReloadUnityProject/: .gitignore
NativeReloadUnityProject/Assets/Example/Scripts/: CAPI.cs  ExampleCAPI.cs  TestScript.cs
NativeReloadUnityProject/Assets/Plugins/: cpp_example_dll.dylib  readme.txt
NativeReloadUnityProject/Assets/Scenes/: SampleScene.unity
NativeReloadUnityProject/Assets/Scripts/: CAPI.cs  NativePluginLoader.cs  PluginManger.cs  TestScript.cs
NativeReloadUnityProject/Assets/fts_native_plugin_reloader/Example/Scripts/: ExampleCAPI.cs  TestScript.cs
NativeReloadUnityProject/Assets/fts_native_plugin_reloader/Scripts/: NativePluginLoader.cs
NativeReloadUnityProject/ProjectSettings/: ProjectSettings.asset
cpp_dll_export/: cpp.hint  cpp_dll_export.cpp  cpp_dll_export.h  cpp_dll_export.sln  cpp_dll_export.vcxproj  cpp_dll_export.vcxproj.filters  dllmain.cpp
cpp_example_dll/: CMakeLists.txt  c_api.cpp  c_api.h  cpp_example_dll.sln  cpp_example_dll.vcxproj  cpp_example_dll.vcxproj.filters  dllmain.cpp
